[package]
name = "optionee"
version = "0.1.0"
authors = ["just-do-halee <just.do.halee@gmail.com>"]
homepage = "https://github.com/just-do-halee/optionee"
repository = "https://github.com/just-do-halee/optionee"

description = "The macro to creates option structure so easily."

readme = "README.md"

keywords = ["macro", "option", "utility", "data-structures", "no_std"]
categories = ["development-tools", "data-structures", "configuration", "no-std"]

license = "MIT OR Apache-2.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
