[package]
name = "optionee"
version = "0.2.0"
authors = ["just-do-halee <just.do.halee@gmail.com>"]
homepage = "https://github.com/just-do-halee/optionee"
repository = "https://github.com/just-do-halee/optionee"

description = "The macro to create option struct easily."

readme = "README.md"

keywords = ["settings", "option", "utility", "data-structures", "configuration"]
categories = ["development-tools", "data-structures", "no-std"]

license = "MIT OR Apache-2.0"
edition = "2018"

[features]
default = ["std"]
std = ["anyhow/default"]

[dependencies]
anyhow = { version = "1", default-features = false }